contrib/seaweedfs/base/seaweedfs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 8333
  selector:
    app: seaweedfs
